@startuml Inference and Output

title Inference & Output

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam ArrowColor #4a6fa5
skinparam ClassBorderColor #4a6fa5
skinparam ClassBackgroundColor #e8f0fe
skinparam ClassHeaderBackgroundColor #c5d8f5

abstract class BaseInference {
    + {abstract} step(hmm_params, carry, t, ys, xs)
    + {abstract} postprocess(carry_0, carry_final, outputs)
    + run(hmm_params, carry_pre, ys, xs)
    - validate_inputs(hmm_params, ys, xs, carry_pre)
}

note top of BaseInference
  run() uses jax.lax.scan to iterate
  step() efficiently over the time axis.
end note

class ForwardAlgorithm {
    + step(hmm_params, carry, t, ys, xs)
    + postprocess(carry_0, carry_final, outputs)
}

note right of ForwardAlgorithm
  At each step t:
    u_t  = u_prev @ Gamma
    f_t  = sum(u_t * g_t)
    u_tt = u_t * g_t / f_t
end note

abstract class BaseOutput {
    + {abstract} log_likelihood()
}

class ForwardOutput {
    + ft : ndarray
    + utt : ndarray
    + ut : ndarray
    --
    + log_likelihood()
}

note right of ForwardOutput
  ft:  scaling factors, shape (T,)
  utt: filtered state probs, shape (T, K)
  ut:  predicted state probs, shape (T, K)
  log_likelihood = sum(log(ft))
end note

BaseInference <|-- ForwardAlgorithm
BaseOutput <|-- ForwardOutput
ForwardAlgorithm ..> ForwardOutput : produces

@enduml
